...
            android:layout_marginTop="@dimen/linearlayout_dialog_export_encrypt_encrypt_margin_top"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_dialog_export_encrypt_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTint="@drawable/checkbox_selector"
                android:text="@string/label_dialog_export_encrypt_encrypt"
                android:textColor="@color/textColor"
                android:checked="true" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_export_encrypt_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_export_encrypt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_export_encrypt_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_export_encrypt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_export_encrypt_cancel"
...
